# powprofiler

./: CMakeLists.txt  LICENSE.md  README.md  a.out  config.cfg  config2.cfg  config3.cfg  config4.cfg  config_matrixexp.cfg  plot.sh  program.cpp  run.sh  splot.sh
include/: async.h  config.hpp  integrator_rk4.hpp  model_1layer.hpp  model_2layer.hpp  model_3layer.hpp  model_battery.hpp  pathn.hpp  power_logger.hpp  powprof.hpp  profiler.hpp  sampler.hpp  sampler_nano.hpp  sampler_odroid.hpp  sampler_tx2.hpp  soc_1resistor.hpp  utility.hpp  vectorn.hpp
profiles/: 1layer-p2-30sb.csv  1layer-s58-pall.csv  1layer_p11s11-al6t.csv  1layer_p61p61-pall.csv  1layer_p61s61-sall.csv  1layer_s61s61-sall.csv  1layer_yolo-25fps.csv  1layer_yolo-32fps.csv  1layer_yolo-5-8fps.csv  3layer-s3-12sb.csv  3layer-s58-pall.csv  3layer-s9-6sxx.csv  3layer_p11s11-al6t.csv  3layer_p61p61-pall.csv  3layer_p61p61-sall.csv  3layer_p61s61-sall.csv  3layer_s61s61-pall.csv  3layer_yolo-25fps.csv  3layer_yolo-5-8fps.csv  3layer_yolo-ocpu.csv  nvx_sample_sfm_profile.csv  profile_nvx_sample_sfm.csv
profiles/matrix-exponentiation/: matrix-exponentiation_1024-20_1layer.csv  matrix-exponentiation_1024-20_3layer.csv  matrix-exponentiation_1024-30_1layer.csv  matrix-exponentiation_1024-30_3layer.csv  matrix-exponentiation_1024-40_1layer.csv  matrix-exponentiation_1024-40_3layer.csv  matrix-exponentiation_1024-50_1layer.csv  matrix-exponentiation_1024-50_3layer.csv  matrix-exponentiation_1024-60_1layer.csv  matrix-exponentiation_1024-60_3layer.csv  matrix-exponentiation_1layer-2.csv  matrix-exponentiation_1layer.csv  matrix-exponentiation_2048-20_1layer.csv  matrix-exponentiation_2048-20_3layer.csv  matrix-exponentiation_2048-30_1layer.csv  matrix-exponentiation_2048-30_3layer.csv  matrix-exponentiation_2048-40_1layer.csv  matrix-exponentiation_2048-40_3layer.csv  matrix-exponentiation_2048-50_1layer.csv  matrix-exponentiation_2048-50_3layer.csv  matrix-exponentiation_2048-60_1layer.csv  matrix-exponentiation_2048-60_3layer.csv  matrix-exponentiation_256-20_1layer.csv  matrix-exponentiation_256-30_1layer.csv  matrix-exponentiation_256-40_1layer.csv  matrix-exponentiation_256-40_3layer.csv  matrix-exponentiation_256-50_1layer.csv  matrix-exponentiation_256-60_1layer.csv  matrix-exponentiation_3layer.csv  matrix-exponentiation_4096-20_1layer.csv  matrix-exponentiation_4096-20_3layer.csv  matrix-exponentiation_4096-30_1layer.csv  matrix-exponentiation_4096-30_3layer.csv  matrix-exponentiation_4096-40_1layer.csv  matrix-exponentiation_4096-40_3layer.csv  matrix-exponentiation_4096-50_1layer.csv  matrix-exponentiation_4096-50_3layer.csv  matrix-exponentiation_4096-60_1layer.csv  matrix-exponentiation_4096-60_3layer.csv  matrix-exponentiation_512-20_1layer.csv  (+6 more)
profiles/matrix-sleep/: matrix-sleep_1024-0_1layer.csv  matrix-sleep_1024-0_3layer.csv  matrix-sleep_1024-10_1layer.csv  matrix-sleep_1024-10_3layer.csv  matrix-sleep_1024-2_1layer.csv  matrix-sleep_1024-2_3layer.csv  matrix-sleep_1024-4_1layer.csv  matrix-sleep_1024-4_3layer.csv  matrix-sleep_1024-6_1layer.csv  matrix-sleep_1024-6_3layer.csv  matrix-sleep_1024-8_1layer.csv  matrix-sleep_1024-8_3layer.csv  matrix-sleep_1layer.csv  matrix-sleep_2048-0_1layer.csv  matrix-sleep_2048-0_3layer.csv  matrix-sleep_2048-10_1layer.csv  matrix-sleep_2048-10_3layer.csv  matrix-sleep_2048-2_1layer.csv  matrix-sleep_2048-2_3layer.csv  matrix-sleep_2048-4_1layer.csv  matrix-sleep_2048-4_3layer.csv  matrix-sleep_2048-6_1layer.csv  matrix-sleep_2048-6_3layer.csv  matrix-sleep_2048-8_1layer.csv  matrix-sleep_2048-8_3layer.csv  matrix-sleep_256-0_1layer.csv  matrix-sleep_256-0_3layer.csv  matrix-sleep_256-10_1layer.csv  matrix-sleep_256-10_3layer.csv  matrix-sleep_256-2_1layer.csv  matrix-sleep_256-2_3layer.csv  matrix-sleep_256-4_1layer.csv  matrix-sleep_256-4_3layer.csv  matrix-sleep_256-6_1layer.csv  matrix-sleep_256-6_3layer.csv  matrix-sleep_256-8_1layer.csv  matrix-sleep_256-8_3layer.csv  matrix-sleep_3layer.csv  matrix-sleep_4096-0_1layer.csv  matrix-sleep_4096-0_3layer.csv  (+22 more)
profiles/old/: 1layer-p52-xxxx.csv  1layer-s3-12sb.csv  1layer-s9-6sxx.csv  1layer_p61p61-sall.csv  1layer_p61s61-pall.csv  (+9 more)
src/: config.cpp  config3.cfg  integrator_rk4.cpp  model_1layer.cpp  model_2layer.cpp  model_3layer.cpp  model_battery.cpp  pathn.cpp  profiler.cpp  sampler_nano.cpp  sampler_odroid.cpp  sampler_tx2.cpp  soc_1resistor.cpp  utility.cpp  vectorn.cpp
(+23 files in other folders)
